Fix null offer teacher test